--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,5 +21,5 @@
       }
     }
   },
-  "postStartCommand": "uvicorn main:app --host 0.0.0.0 --port 8000"
+  "postStartCommand": "python main.py"
 }
