--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,9 @@
 {
   "name": "CopperHead Server",
   "image": "mcr.microsoft.com/devcontainers/python:3.11",
-  "features": {},
+  "features": {
+    "ghcr.io/devcontainers/features/copilot-cli:1": {}
+  },
   "postCreateCommand": "pip install -r requirements.txt",
   "forwardPorts": [8765],
   "portsAttributes": {
