Auto-set port 8765 public via gh CLI in postCreateCommand
devcontainer.json visibility attribute is not supported by Codespaces.
Use gh CLI workaround instead (|| true to not fail if CLI unavailable).

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,13 +4,12 @@
   "features": {
     "ghcr.io/devcontainers/features/copilot-cli:1": {}
   },
-  "postCreateCommand": "pip install -r requirements.txt",
+  "postCreateCommand": "pip install -r requirements.txt && gh codespace ports visibility 8765:public -c $CODESPACE_NAME || true",
   "forwardPorts": [8765],
   "portsAttributes": {
     "8765": {
       "label": "CopperHead Server",
-      "onAutoForward": "notify",
-      "visibility": "public"
+      "onAutoForward": "notify"
     }
   },
   "customizations": {
