--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,12 +4,13 @@
   "features": {
     "ghcr.io/devcontainers/features/copilot-cli:1": {}
   },
-  "postCreateCommand": "pip install -r requirements.txt && gh codespace ports visibility 8765:public -c $CODESPACE_NAME || true",
+  "postCreateCommand": "pip install -r requirements.txt",
   "forwardPorts": [8765],
   "portsAttributes": {
     "8765": {
       "label": "CopperHead Server",
-      "onAutoForward": "notify"
+      "onAutoForward": "notify",
+      "visibility": "public"
     }
   },
   "customizations": {
