Revert "Auto-set port 8765 to public in Codespace"
This reverts commit 2afcc7e6e5800dae14c765395496dce48f512549.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,8 +9,7 @@
   "portsAttributes": {
     "8765": {
       "label": "CopperHead Server",
-      "onAutoForward": "notify",
-      "visibility": "public"
+      "onAutoForward": "notify"
     }
   },
   "customizations": {
