fix: use explicit devcontainer image tag to fix Codespaces creation

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
   "name": "CopperHead Server",
-  "image": "mcr.microsoft.com/devcontainers/python:3",
+  "image": "mcr.microsoft.com/devcontainers/python:1-3.13",
   "features": {
     "ghcr.io/devcontainers/features/copilot-cli:1": {}
   },
